--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,12 +1,18 @@
 spring:
+  jpa:
+    hibernate:
+      format_sql: true
+    show-sql: true
   datasource:
-    driverClassName: org.h2.Driver
-    url: jdbc:h2:mem:user
+    url: jdbc:h2:file:/home/flaoliveira/db/health2gether/user
     username: sa
     password: sa
-  jpa:
-    show-sql: true
-    hibernate.format_sql: true
+    driver-class-name: org.h2.Driver
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+
 #  zipkin:
 #    baseUrl: http://localhost:9411/
 
