--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,14 @@
-spring:
-  sleuth:
-    sampler:
-      percentage: 0.5
+#spring:
+#  sleuth:
+#    sampler:
+#      percentage: 0.5
 
+#eureka:
+#  instance:
+#    preferIpAddress: true
+#  client:
+#    registerWithEureka: true
+#    fetchRegistry: true
 eureka:
-  instance:
-    preferIpAddress: true
   client:
-    registerWithEureka: true
-    fetchRegistry: true
+    enabled: false
