--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -4,7 +4,7 @@ spring:
       format_sql: true
     show-sql: true
   datasource:
-    url: jdbc:h2:file:/home/flaoliveira/db/health2gether/user
+    url: jdbc:h2:file:~/db/health2gether/user
     username: sa
     password: sa
     driver-class-name: org.h2.Driver
@@ -16,7 +16,7 @@ spring:
 #  zipkin:
 #    baseUrl: http://localhost:9411/
 
-#eureka:
-#  client:
-#    serviceUrl:
-#      defaultZone: http://localhost:8761/eureka/
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
