incluindo endpoints para integrar com perfil

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -10,7 +10,7 @@ spring:
   zipkin:
     baseUrl: http://health2gether-zipkin:9411/
 
-#eureka:
-#  client:
-#    serviceUrl:
-#      defaultZone: http://health2gether-discovery-server:8761/eureka/
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://health2gether-discovery-server:8761/eureka/
