--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -13,8 +13,8 @@ spring:
       enabled: true
       path: /h2-console
 
-#  zipkin:
-#    baseUrl: http://localhost:9411/
+  zipkin:
+    baseUrl: http://localhost:9411/
 
 eureka:
   client:
