--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
-#spring:
-#  sleuth:
-#    sampler:
-#      percentage: 0.5
+spring:
+  sleuth:
+    sampler:
+      percentage: 0.5
 
 #eureka:
   instance:
